# pan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RUN_WITH_AUDIO.sh  START_JACK.sh  connect_jack.sh  imgui.ini  pan.desktop
.github/: FUNDING.yml
examples/: midi_keyboard_test.cpp  midi_test.cpp  sine_wave_test.cpp  waveform_gui_test.cpp  waveform_test.cpp
include/pan/audio/: audio_buffer.h  audio_device.h  audio_engine.h  beat_repeat.h  bit_noise_texture.h  chorus.h  distortion.h  effect.h  eq8.h  resonator_bank.h  reverb.h  sampler.h  sidechain_pump.h  wow_flutter.h
include/pan/gui/: main_window.h
include/pan/midi/: midi_clip.h  midi_input.h  midi_message.h  synthesizer.h
include/pan/project/: project_manager.h
include/pan/track/: audio_clip.h  track.h  track_manager.h
src/: main.cpp
src/audio/: audio_buffer.cpp  audio_device.cpp  audio_engine.cpp  beat_repeat.cpp  bit_noise_texture.cpp  chorus.cpp  distortion.cpp  eq8.cpp  resonator_bank.cpp  reverb.cpp  sampler.cpp  sidechain_pump.cpp  wow_flutter.cpp
src/gui/: main_window.cpp
src/midi/: midi_clip.cpp  midi_input.cpp  midi_message.cpp  synthesizer.cpp
src/project/: project_manager.cpp
src/track/: audio_clip.cpp  track.cpp  track_manager.cpp
tests/: CMakeLists.txt  test_audio_buffer.cpp
